# dataLLMrec

./: LICENSE  README.md  datarec.yml  setup.cfg
data/: datasetcards_subset.jsonl
datarec/src/: datacards2jsonlines.py  dataset_recommendation_llamacpp.py
