[metadata]
name = dataLLMrec
description = Package for the PIR module on Dataset Recommendation with Large Language Models.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ioannis Chalkiadakis
version=0.1
license = MIT
license_files = LICENSE
url=https://github.com/ichalkiad/dataLLMrec
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/ichalkiad/dataLLMrec/issues

[options]
packages =
    datarec

python_requires = >=3.11
install_requires =
        ipdb
        jsonlines

zip_safe = no

[options.packages.find]
where = datarec

